--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <!-- SEO Meta Tags -->
-    <title>Dr. Imad AIT LAASRI | Researcher in Innovative Smart Energy Systems & Sustainable Building Materials</title>
+    <title>Dr. Imad AIT LAASRI | Smart Energy & Sustainable Materials</title>
     <meta name="description" content="Researcher in smart energy systems & sustainable building materials. Expert in PCM storage, HVAC optimization & adaptive building technologies." />
     <meta name="keywords" content="energy, smart energy systems, sustainable building, building materials, PCM, HVAC optimization, adaptive building technologies, indoor comfort" />
     <meta name="author" content="Dr. Imad AIT LAASRI" />
@@ -15,7 +15,7 @@
     <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml" />
 
 <!-- Open Graph for LinkedIn -->
-    <meta property="og:title" content="Dr. Imad AIT LAASRI | Researcher in Innovative Smart Energy Systems & Sustainable Building Materials" />
+    <meta property="og:title" content="Dr. Imad AIT LAASRI | Smart Energy & Sustainable Materials" />
     <meta property="og:description" content="Researcher in smart energy systems & sustainable building materials. Expert in PCM storage, HVAC optimization & adaptive building technologies." />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://imadcv.vercel.app/" />
