Update add Easter Egg

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
 <!-- SEO Meta Tags -->
     <title>Dr. Imad AIT LAASRI | Smart Energy & Sustainable Materials</title>
     <meta name="description" content="Researcher in smart energy systems & sustainable building materials. Expert in PCM storage, HVAC optimization & adaptive building technologies." />
@@ -16,16 +17,15 @@
 
 <!-- Open Graph for LinkedIn -->
     <meta property="og:title" content="Dr. Imad AIT LAASRI | Smart Energy & Sustainable Materials" />
-    <meta property="og:description" content="Researcher in smart energy systems & sustainable building materials. Expert in PCM storage, HVAC optimization & adaptive building technologies." />
+    <meta property="og:description" content="Researcher in smart energy systems & sustainable building materials. Expert in PCM storage & HVAC optimization." />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://imadcv.vercel.app/" />
     <meta property="og:image" content="https://imadcv.vercel.app/smart_energy_efficiency.png" />
     <meta property="og:site_name" content="Dr. Imad AIT LAASRI" />
 
-<!-- Optional: link to your LinkedIn profile -->
     <link rel="author" href="https://www.linkedin.com/in/imadaitlaasri/" />
-
   </head>
+
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
